--- a/src/app/home/owner-setup/owner-setup.component.html
+++ b/src/app/home/owner-setup/owner-setup.component.html
@@ -62,6 +62,18 @@
         [ngClass] = "'error'"> {{validation.message}}</label>
         </ng-container>
    </ion-item>
+
+   <ion-item>
+    <ion-label position="floating">Password</ion-label>
+    <ion-input formControlName="password" type="password" [(ngModel)]="password"></ion-input>
+    <ng-container *ngFor="let validation of validation_messages.password">
+       <label *ngIf="ownerForm.get('password').hasError(validation.type) 
+       && (ownerForm.get('password').dirty || 
+       ownerForm.get('password').touched)" 
+       [ngClass] = "'error'"> {{validation.message}}</label>
+       </ng-container>
+  </ion-item>
+
    <ion-item>
        <ion-label position="floating">Owner Address</ion-label>
        <ion-textarea formControlName="address" [(ngModel)]="restaurantOwner.address"></ion-textarea>
