--- a/src/app/home/restaurant-setup/setup-restaurant-modal.component.html
+++ b/src/app/home/restaurant-setup/setup-restaurant-modal.component.html
@@ -32,10 +32,10 @@
       {{validation.message}}</label>
       </ng-container>
       </div>
-      <ion-item>
+      <!-- <ion-item>
           <ion-label position="floating">Restaurant Password(Auto generated)</ion-label>
           <ion-input type="password" formControlName ="password"  [(ngModel)]="restaurantBasic.password" disabled></ion-input>
-        </ion-item>
+        </ion-item> -->
 <ion-item>
     <ion-label position="floating">Restaurant Mobile No.</ion-label>
     <ion-input formControlName="phone" [(ngModel)]="restaurantBasic.phone"></ion-input>
