changed related to creation of testing env

--- a/src/app/public/login/login.page.html
+++ b/src/app/public/login/login.page.html
@@ -35,11 +35,11 @@
   <ion-item class="no-border">
     <a class="forgotPasswordLink"> Forgot Password?</a>
   </ion-item>
-  <!-- <ion-item class="no-border">
+  <ion-item class="no-border">
     <p class="otherOption">
       Don't have an account?&nbsp;&nbsp;
       <a class="signUpLink" routerLink="/register" routerDirection="forward">Sign up</a>
     </p>
-  </ion-item> -->
+  </ion-item>
 
 </ion-content>
