--- a/src/app/home/owner-setup/owner-setup.component.html
+++ b/src/app/home/owner-setup/owner-setup.component.html
@@ -64,7 +64,7 @@
    </ion-item>
 
    <ion-item>
-    <ion-label position="floating">Password</ion-label>
+    <ion-label position="floating">Login Code</ion-label>
     <ion-input formControlName="password" type="password" [(ngModel)]="password"></ion-input>
     <ng-container *ngFor="let validation of validation_messages.password">
        <label *ngIf="ownerForm.get('password').hasError(validation.type) 
